--- a/src/app/pages/premium/upgrade/upgrade.component.scss
+++ b/src/app/pages/premium/upgrade/upgrade.component.scss
@@ -263,7 +263,7 @@ h2 {
 }
 
 .pricing-label {
-  font-weight: 700;
+  font-weight: bold;
   color: var(--mat-sys-primary);
   font-size: 1.1rem;
   margin-bottom: 0.1rem;
@@ -278,7 +278,7 @@ h2 {
 }
 .price-amount {
   font-size: 1.35rem;
-  font-weight: 700;
+  font-weight: bold;
   color: var(--mat-sys-primary);
   margin-right: 0.2rem;
   letter-spacing: 0.5px;
