--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgba(0, 0, 0, 0.5);
+    // color: rgba(0, 0, 0, 0.5);
 }
 
 .article-summary {
@@ -120,7 +120,7 @@
 }
 
 .article-tag {
-    background-color: rgba(0, 0, 0, 0.05);
+    // background-color: rgba(0, 0, 0, 0.05);
     padding: 2px 8px;
     border-radius: 12px;
     font-size: 0.8rem;
@@ -134,7 +134,7 @@
     justify-content: center;
     text-align: center;
     padding: 64px 16px;
-    color: rgba(0, 0, 0, 0.6);
+    // color: rgba(0, 0, 0, 0.6);
 
     mat-icon {
         font-size: 64px;
