fix: Improves loading of events for new and anoymous browsers.

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,6 +1,6 @@
 <h1></h1>
 
-<app-event [id]="id()"></app-event>
+<app-event [event]="event()"></app-event>
 
 <div class="reactions">
     @for(reaction of reactions(); track reaction.emoji) {
