--- a/src/app/pages/profile/profile-notes/profile-notes.component.scss
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.scss
@@ -88,7 +88,7 @@
   align-items: center;
   justify-content: center;
   min-height: 200px;
-  color: var(--mat-subtitle-text-color, rgba(0, 0, 0, 0.6));
+  // color: var(--mat-subtitle-text-color, rgba(0, 0, 0, 0.6));
 
   mat-icon {
     font-size: 48px;
