--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -94,7 +94,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgba(0, 0, 0, 0.6);
+    // color: rgba(0, 0, 0, 0.6);
     font-size: 0.9rem;
     margin-top: 16px;
 }
