--- a/src/app/pages/premium/premium.component.html
+++ b/src/app/pages/premium/premium.component.html
@@ -1,48 +1,41 @@
+@if (!accountState.accountSubscription()) {
 <div class="premium-container">
   <div class="premium-header">
-    <h1 class="premium-title title-font">Nostria Premium</h1>
-    <p class="premium-subtitle">Unlock the full potential of your Nostr experience</p>
+      <h1 class="premium-title title-font">Nostria Premium</h1>
+      <p class="premium-subtitle">Unlock the full potential of your Nostr experience</p>
 
-    <div class="cta-container">
-      <button mat-flat-button color="primary" class="premium-cta-button" [routerLink]="['/premium/upgrade']">
-        <mat-icon>stars</mat-icon>
-        Upgrade to Premium
-      </button>
-
-      <br><br>
-      <h2>Premium</h2>
-
-      <div class="premium-price-container">
-        <div class="price-option">
-          <span class="price-amount">$10</span>/month
-          <span class="price-period">montly billing</span>
-        </div>
-        <span class="price-divider">or</span>
-        <div class="price-option best-value">
-          <span class="price-amount">$8</span>/month
-          <span class="price-period">yearly billing</span>
-          <span class="price-tag">Best Value</span>
-        </div>
+      <div class="cta-container">
+        <button mat-flat-button color="primary" class="premium-cta-button" [routerLink]="['/premium/upgrade']">
+          <mat-icon>stars</mat-icon>
+          Upgrade to Premium
+        </button>
       </div>
-
-      <h2>Premium+</h2>
-
-      <div class="premium-price-container">
-        <div class="price-option">
-          <span class="price-amount">$25</span>/month
-          <span class="price-period">montly billing</span>
-        </div>
-        <span class="price-divider">or</span>
-        <div class="price-option best-value">
-          <span class="price-amount">$20</span>/month
-          <span class="price-period">yearly billing</span>
-          <span class="price-tag">Best Value</span>
-        </div>
-      </div>
+      <p>
+        <br>
+        <a href="https://www.nostria.app/premium" mat-flat-button>Learn more</a>
+      </p>
     </div>
-    <p>
-      <br>
-      <a href="https://www.nostria.app/premium" mat-flat-button>Learn more</a>
-    </p>
-  </div>
 </div>
+} @else {
+  <div class="content-medium">
+    <h1>Nostria Premium</h1>
+
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Your subscription</mat-card-title>
+      </mat-card-header>
+  
+      <mat-card-content>
+        <mat-list role="list">
+          <mat-list-item role="listitem">
+            Plan: {{ accountState.accountSubscription()?.tier }}
+          </mat-list-item>
+          <mat-list-item role="listitem">
+            Expiry date: {{ accountState.accountSubscription()?.expiresAt | date:'short' }}
+          </mat-list-item>
+        </mat-list>
+        
+      </mat-card-content>
+    </mat-card>
+  </div>
+}
