--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -47,8 +47,8 @@
         <!-- General Settings -->
         @if (activeSection() === 'general') {
 
-          <!-- <button (click)="saveSettings()">Save Settings</button>
-          <button (click)="loadSettings()">Load Settings</button> -->
+          <button (click)="saveSettings()">Save Settings</button>
+          <button (click)="loadSettings()">Load Settings</button>
 
         <div class="setting-item">
           <span>Dark Mode</span>
