feat: use fancy URLs for premium users' profile pages
E.g. if the user have taken username "bob" upon premium signup,
his profile page should be visible by /u/bob

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -318,7 +318,7 @@
 
         <mat-nav-list>
           @if(app.authenticated()) {
-          <a mat-list-item [routerLink]="['/p', accountState.pubkey()]" (click)="toggleProfileSidenav()">
+          <a mat-list-item [routerLink]="accountState.profilePath()" (click)="toggleProfileSidenav()">
             <mat-icon matListItemIcon>person</mat-icon>
             <span>My Profile</span>
           </a>
