--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -47,8 +47,9 @@
         <!-- General Settings -->
         @if (activeSection() === 'general') {
 
-          <button (click)="saveSettings()">Save Settings</button>
-          <button (click)="loadSettings()">Load Settings</button>
+          <!-- Enable to test API stored settings, most settings should be app-specific data on relays, not API. -->
+          <!-- <button (click)="saveSettings()">Save Settings</button>
+          <button (click)="loadSettings()">Load Settings</button> -->
 
         <div class="setting-item">
           <span>Dark Mode</span>
