--- a/src/app/pages/premium/settings/settings.html
+++ b/src/app/pages/premium/settings/settings.html
@@ -9,10 +9,10 @@
     <mat-card-content>
       <mat-list role="list">
         <mat-list-item role="listitem">
-          Plan: {{ accountState.accountSubscription()?.tier }}
+          Plan: {{ accountState.subscription()?.tier }}
         </mat-list-item>
         <mat-list-item role="listitem">
-          Expiry date: {{ accountState.accountSubscription()?.expires | date:'short' }}
+          Expiry date: {{ accountState.subscription()?.expires | date:'short' }}
         </mat-list-item>
       </mat-list>
 
