--- a/src/app/pages/premium/upgrade/upgrade.component.scss
+++ b/src/app/pages/premium/upgrade/upgrade.component.scss
@@ -626,3 +626,8 @@ h2 {
   justify-content: space-between;
   height: 100%;
 }
+
+::ng-deep .mat-mdc-form-field-icon-suffix:has(mat-spinner) {
+  position: absolute;
+  right: 12px;
+}
