fix: adjust margins for social preview card

--- a/src/app/components/social-preview/social-preview.component.scss
+++ b/src/app/components/social-preview/social-preview.component.scss
@@ -3,6 +3,8 @@
     display: block;
     text-decoration: none;
     color: inherit;
+    margin-top: 0.4rem;
+    margin-bottom: 0.4rem;
     
     mat-card {
         height: 120px;
